--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.0",
+    "crypto-js": "^4.2.0",
+    "date-fns": "^3.0.0",
+    "googleapis": "^140.0.0",
     "next": "^14.2.0",
+    "next-auth": "^4.24.0",
+    "qrcode": "^1.5.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "next-auth": "^4.24.0",
-    "@neondatabase/serverless": "^0.9.0",
-    "googleapis": "^140.0.0",
-    "qrcode": "^1.5.0",
-    "date-fns": "^3.0.0",
-    "zod": "^3.22.0",
-    "crypto-js": "^4.2.0"
+    "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.0.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.3.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.0",
-    "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0"
   }
 }
