--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -3,34 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.0",
-    "crypto-js": "^4.2.0",
-    "date-fns": "^3.0.0",
-    "googleapis": "^140.0.0",
-    "next": "^14.2.0",
-    "next-auth": "^4.24.0",
-    "qrcode": "^1.5.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "zod": "^3.22.0"
+    "@prisma/client": "^5.22.0",
+    "next": "14.2.33",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2",
-    "@types/node": "^20.0.0",
-    "@types/qrcode": "^1.5.6",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^14.2.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.3.0"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "prisma": "^5.22.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
