--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@roboterschulung/admin",
-  "version": "1.0.0",
+  "version": "1.4.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@neondatabase/serverless": "^0.10.1",
+    "googleapis": "^144.0.0",
     "next": "14.2.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
