--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,10 +10,15 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
     "@neondatabase/serverless": "^0.10.1",
+    "@prisma/client": "^5.22.0",
+    "@types/pdfkit": "^0.17.3",
+    "@types/qrcode": "^1.5.6",
+    "canvas": "^3.2.0",
     "googleapis": "^144.0.0",
     "next": "14.2.33",
+    "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
