fix: Repair root package.json and add postinstall script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:admin": "npm run build --workspace=apps/admin",
     "build:verify": "npm run build --workspace=apps/verify",
     "lint": "npm run lint --workspaces",
-    "clean": "rm -rf node_modules apps/*/node_modules apps/*/.next packages/*/node_modules"
+    "clean": "rm -rf node_modules apps/*/node_modules apps/*/.next packages/*/node_modules",
+    "postinstall": "npm run postinstall --workspaces --if-present"
   },
   "engines": {
     "node": ">=18.0.0",
